--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {margin:0; padding:0;}
+
+html, body {width: 100%; height: 100%;}
+
+div.paper {width: 100%; height:100%; position:relative;}
+
 .diagram {
     position: absolute;   
     border: 1px solid #ececec;
