--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ div.paper {width: 100%; height:100%; position:relative;}
     margin: 0;
     background-color: #fbfbfb;
     min-width: 180px;
-    min-height: 80px;
+    min-height: 40px;
     z-index: 10;
 }
 
@@ -38,7 +38,7 @@ div.paper {width: 100%; height:100%; position:relative;}
     border-bottom: 1px solid #e0e0e0;
 
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 9pt;
+    font-size: 8pt;
     color: #5858cc;
 
 }
@@ -48,6 +48,22 @@ div.paper {width: 100%; height:100%; position:relative;}
     padding: 0; 
     width: 100%;
     /* background-color: #ffffff; */
+}
+
+.head_title {
+    float: left;
+}
+
+.head_icons {
+    float: right;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
 }
 
 .shadow {
@@ -63,7 +79,7 @@ div.paper {width: 100%; height:100%; position:relative;}
     padding: 0;
     display: table; 
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 8pt;
+    font-size: 7pt;
     border-collapse: separate;
     border-spacing: 2px;
     width: 100%;
