--- a/src/index.css
+++ b/src/index.css
@@ -66,12 +66,16 @@ div.paper {width: 100%; height:100%; position:relative;}
     display: block;
 }
 
-.shadow {
+/* .shadow {
     -moz-box-shadow: 1px 1px 8px 2px #ebebeb;
     -webkit-box-shadow: 1px 1px 8px 2px #ebebeb;
     box-shadow: 1px 1px 8px 2px #ebebeb;
     -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#ebebeb')";
     filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#ebebeb');
+} */
+
+.shadow {
+    border-color: #ebebeb;
 }
 
 .sheet {
